deploy/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ewallet-ingress
  namespace: ewallet
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - books-api.site
      secretName: ewallet-tls
  rules:
    - host: books-api.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ewallet-service
                port:
                  number: 8000
